fix: menu navigation on mobile

--- a/src/blocks/menu/__bottom/menu__bottom.css
+++ b/src/blocks/menu/__bottom/menu__bottom.css
@@ -1,6 +1,9 @@
 .menu__bottom {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  gap: 20px;
 
   margin: auto 0 90px;
 
